fixing hero image on mobile portrait view

--- a/src/app/components/app.component.scss
+++ b/src/app/components/app.component.scss
@@ -147,7 +147,7 @@
 /*
 * MEDIA QUERIES
 */
-@media (max-width: 800px){
+@media (max-width: 850px){
     .navbar{
         font-size: 12px;
     }
