--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -107,7 +107,7 @@ a:hover {
 /*
 * MEDIA QUERIES
 */
-@media (max-width: 800px) {
+@media (max-width: 850px) {
     .home {
         width: inherit;
     }
@@ -126,7 +126,7 @@ a:hover {
 
     .heroImage {
         width: 280px;
-        height: auto !important;
+        height: 216.05px !important;
         margin-right: -20px;
     }
 
@@ -146,7 +146,7 @@ a:hover {
     }
 }
 
-@media (max-width: 1200px) and (orientation: landscape) {
+@media (max-width: 850px) and (orientation: landscape) {
     .titleContainer {
         display: flex;
         margin-top: 0px;
@@ -165,7 +165,7 @@ a:hover {
 
     .heroImage {
         width: 250px;
-        height: auto !important;
+        height: 192.91px !important;
         margin-right: -50px;
     }
 
