--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -76,7 +76,7 @@
 /*
 * MEDIA QUERIES
 */
-@media (max-width: 800px){
+@media (max-width: 850px){
     .borderOutter { 
         top: 0px;
         left: 0px;
@@ -98,4 +98,3 @@
         margin-bottom: 20px;
     }
 }
-
